@@ -1,3 +1,8 @@
+Fri Feb 03 18:39:24 1995  Chris Provenzano (proven@mit.edu)
+
+	* kprop.c Use krb5_get_in_tkt_with_keytab() instead of
+		 krb5_get_in_tkt_with_skey().
+
 Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)
 
     * Added krb5_context to all krb5_routines
